Fixed B+ Tree implementation and added comprehensive error handling